add mem management